fluxcd/clusters/pi/authentik/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-ingress-route
  namespace: authentik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.local.fellowfreak.dev`)
      services:
        - name: authentik-server
          port: 80
  tls:
    secretName: local-fellowfreak-dev-production-tls
